# python-amazon-mws

./: .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  bandit.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: black.yaml  ci.yaml  coverage.yaml  formatting.yaml  linting.yaml  main.yaml  testing.yaml
docs/: Makefile  make.bat  requirements.txt
docs/source/: changelog.rst  conf.py  feeds.rst  fulfillmentInboundShipment.rst  fulfillmentInventory.rst  fulfillmentOutboundShipment.rst  gettingStarted.rst  index.rst  installation.rst  newFeaturesTopNote100dev15.rst  newFeaturesTopNote100dev16.rst  orders.rst  parsedXMLResponses.rst  prerequisites.rst  products.rst  reports.rst  sellers.rst  tutorial_1.rst
examples/: find_product.py  get_fees.py  get_lowest_offer.py
mws/: __init__.py  decorators.py  errors.py  mws.py  offamazonpayments.py  response.py  utils.py
mws/apis/: __init__.py  easyship.py  feeds.py  finances.py  inbound_shipments.py  inventory.py  merchant_fulfillment.py  offamazonpayments.py  orders.py  outbound_shipments.py  products.py  recommendations.py  reports.py  sellers.py  subscriptions.py
mws/future_utils/: __init__.py  collections.py  crypto.py  deprecation.py  params.py  parsers.py  timezone.py  xml.py
tests/: conftest.py  example_response.txt  test_mws_base.py  test_next_token_decorator.py  test_param_methods.py  test_service_status.py  test_utils.py  test_wrappers.py
(+68 files in other folders)
