[metadata]
description-file = README.md

[flake8]
# Config adjusted to work with Black formatting:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/#flake8-checker
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
exclude =
    .venv
    .git
    docs
max-complexity = 18
select = B,C,E,F,W,T4,B9
