[metadata]
description-file = README.md

[flake8]
# Config adjusted to work with Black formatting:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/#flake8-checker
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
exclude =
    .venv
    .git
    docs
    pythonenv*
max-complexity = 18
select = B,C,E,F,W,T4,B9

[rstcheck]
# Configs specific to rstcheck, used for linting reStructuredText documentation:
# https://github.com/myint/rstcheck#configuration-file
# All the "auto" directives below are part of `sphinx.ext.autodoc`, and for some reason rstcheck doesn't know that.
ignore_directives=automodule,autoclass,autoexception,autofunction,autodecorator,autodata,automethod,autoattribute

[tool:pytest]
addopts = -s -v

[coverage:run]
branch = True
